Setting working directory on all "su" execs.